# cedarwood

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: CI.yml
benches/: cedarwood_benchmark.rs
benches/macro-benchmark/: Cargo.toml
docs/: api-reference.md  architecture.md  internals.md
docs/plans/: 2026-04-04-modernization-design-v2.md  2026-04-04-modernization-design.md  2026-04-04-modernization-plan-final.md  2026-04-04-modernization-plan.md  modernization-design-review-1.md  modernization-design-review-2.md  modernization-plan-review-1.md  modernization-plan-review-2.md
src/: lib.rs
