[package]
name = "cedarwood"
description = "efficiently-updatable double-array trie in Rust (ported from cedar)"
repository = "https://github.com/MnO2/cedarwood"
version = "0.5.0"
license = "BSD-2-Clause"
authors = ["Paul Meng <me@paulme.ng>"]
readme = "README.md"
keywords = ["trie", "cedar", "string", "search", "text"]
categories = ["data-structures", "text-processing"]
edition = "2021"
exclude = ["/benches/**"]

[features]
default = []
reduced-trie = []

[dev-dependencies]
criterion = "0.5"
rand = "0.8.5"

[[bench]]
name = "cedarwood_benchmark"
harness = false
path = "./benches/cedarwood_benchmark.rs"
required-features = []

[package.metadata.docs.rs]
all-features = true

[dependencies]
smallvec = { version = "1.13", features = ["union"] }
